compiler/tests/liva/errors/e0904_enum_exhaustiveness.liva
// Error Test: E0904 — Non-exhaustive enum switch (missing variants)
// EXPECT: E0904
enum Color { Red, Green, Blue }

main() {
    let c = Color.Red
    let name = switch c {
        Color.Red => "red"
    }
    print(name)
}
